# audio2face

./: .gitignore  .gitlab-ci.yml  README.md  README_CN.md  main.py  pyproject.toml  ruff.toml
.github/workflows/: build.yml  test.yml
audio2face/apis/: builder.py  streaming_audio2face_v1.py
audio2face/data_structures/: audio2face_v1.proto  face_clip.py
audio2face/infer/: builder.py  dummy_feature_extractor.py  dummy_generator.py  onnx_unitalker.py  torch_feature_extractor.py
audio2face/postprocess/: base_postprocess.py  blendshape_clip.py  blendshape_scale.py  blendshape_threshold.py  builder.py  custom_blink.py  linear_exp_blend.py  offset.py  rename.py  unitalker_clip.py  unitalker_random_blink.py
audio2face/service/: exceptions.py  server.py
audio2face/split/: base_split.py  builder.py  dummy_split.py  energy_split.py
audio2face/utils/: io.py
configs/: aws.py  cpu.py  cuda.py  local.py  mmd_arkit_mapping.json  unitalker_mouth_names.json  unitalker_output_names.json
configs/KQ-default_blink/: anger_1.json  anger_2.json  fear_1.json  happiness_2.json  neutral.json  sadness_3.json  sadness_4.json  shyness_1.json  shyness_3.json  surprise_2.json
configs/KQ-default_offset/: disgust_2.json  fear_1.json  fear_4.json  happiness_2.json  happiness_4.json  sadness_3.json  shyness_2.json  surprise_1.json  surprise_2.json  surprise_3.json  surprise_4.json
configs/blendshapes_offset/: anger_1.json  anger_2.json  anger_3.json  anger_4.json  (+13 more)
dockerfiles/: Dockerfile-cpu  Dockerfile-cuda12
docs/: README_CN.md  install.md
tools/: capacity_benchmark.py
(+46 files in other folders)
